# fury

./: .asf.yaml  .bazelrc  .editorconfig  .flake8  .gitattributes  .gitignore  .markdownlint.yml  .yamllint  .ymllint  BUILD  BUILD.md  CONTRIBUTING.md  DISCLAIMER  LICENSE  MYCONTRIBUTION.md  NOTICE  README.md  README_CN.md  SECURITY.md  WORKSPACE  licenserc.toml  package-lock.json
.github/: CODEOWNERS  pull_request_template.md  sync.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  (+5 more)
bazel/: fory_deps_setup.bzl  fury.bzl  fury_deps_setup.bzl  grpc-cython-copts.patch  grpc-python.patch
ci/: deploy.sh  format.sh  generate_release_note.py  release.py  run_ci.py  run_ci.sh
cpp/: README.md
csharp/: .csharpierrc.yaml  Fury.slnx
dart/: .gitignore  README.md  analysis_options.yaml  build.yaml  pubspec.yaml
docs/: README.md  cpp_debug.md  development.md  java_object_graph_guide.md  user_guide.md  xlang_object_graph_guide.md
fury-core/: README.md  pom.xml
go/: README.md
integration_tests/: README.md  pom.xml
java/: HEADER  README.md  checkstyle-suppressions.xml  checkstyle.xml  license-format.xml  nohup.out  pom.xml
javascript/: .eslintrc.cjs  .gitignore  README.md  index.ts  jest.config.js  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
kotlin/: README.md  pom.xml
licenses/: LICENSE-cython-abseil-example.txt  LICENSE-murmurHash3.js.txt
python/: README.md  pyproject.toml  setup.py
python/pyfory/: __init__.py  _fory.py  _registry.py  _serialization.pyx  _serializer.py  _struct.py  _util.pxd  _util.pyx  buffer.py  codegen.py  error.py  resolver.py  serializer.py  type.py  util.py
python/pyfory/format/: __init__.py  _format.pyx  encoder.pxi  encoder.py  infer.py  row.pxi  serializer.py  vectorized.pxi
python/pyfory/format/tests/: test_encoder.py  test_infer.py  test_vectorized.py
python/pyfory/includes/: libformat.pxd  libserialization.pxd  libutil.pxd
python/pyfory/lib/: __init__.py
python/pyfory/lib/mmh3/: __init__.py  mmh3.pxd
python/pyfory/lib/tests/: test_collection.py  test_mmh3.py
python/pyfory/meta/: field_info.py  meta_share.py  metastring.py  type_info.py  xtype_resolver.py
python/pyfory/tests/: benchmark.py  core.py  profiling.py  record.py  test_buffer.py  test_codegen.py  test_cross_language.py  test_metastring.py  test_metastring_resolver.py  test_serializer.py  test_struct.py  test_type_def.py
python/pyfury/: __init__.py  _fury.py  _registry.py  _serialization.pyx  _serializer.py  _struct.py  _util.pxd  _util.pyx  buffer.py  codegen.py  error.py  resolver.py  serializer.py  type.py  util.py
python/pyfury/format/: __init__.py  _format.pyx  encoder.pxi  encoder.py  infer.py  row.pxi  serializer.py  vectorized.pxi
python/pyfury/format/tests/: test_encoder.py  test_infer.py  test_vectorized.py
python/pyfury/includes/: libabsl.pxd  libformat.pxd  libserialization.pxd  libutil.pxd
python/pyfury/lib/: __init__.pxd  __init__.py  collection.py
python/pyfury/lib/meta/: meta_string.py
python/pyfury/lib/mmh3/: __init__.py  mmh3.pxd  mmh3.pyx
python/pyfury/lib/tests/: __init__.py  test_collection.py  test_mmh3.py
python/pyfury/meta/: decoder.py  encoder.py  encoding.py  metastring.py  preconditions.py
python/pyfury/tests/: __init__.py  benchmark.py  core.py  profiling.py  record.py  test_buffer.py  test_codegen.py  test_cross_language.py  test_meta_string.py  test_metastring.py  test_metastring_resolver.py  test_serializer.py  test_struct.py
python/pyfury/utils/: preconditions.py
rust/: Cargo.toml  README.md  rustfmt.toml
rust/fory/: Cargo.toml
rust/fory-core/: Cargo.toml
rust/fory-core/src/: error.rs  fory.rs  lib.rs  types.rs
rust/fory-core/src/meta/: meta_string.rs  type_meta.rs
rust/fory-core/src/resolver/: class_resolver.rs  context.rs  meta_resolver.rs  mod.rs
rust/fory-core/src/row/: reader.rs  writer.rs
rust/fory-core/src/serializer/: any.rs  bool.rs  datetime.rs  list.rs  map.rs  mod.rs  number.rs  option.rs  primitive_list.rs  set.rs  string.rs
rust/fory-derive/: Cargo.toml
rust/fory-derive/src/: fory_row.rs  lib.rs  util.rs
rust/fory-derive/src/object/: derive_enum.rs  misc.rs  mod.rs  read.rs  serializer.rs  write.rs
rust/fory/src/: lib.rs
rust/fury/: Cargo.toml
rust/fury-core/: Cargo.toml
rust/fury-core/src/: buffer.rs  error.rs  fury.rs  lib.rs  read_state.rs  serializer.rs  types.rs  util.rs  write_state.rs
rust/fury-core/src/internal/: bool.rs  datetime.rs  list.rs  map.rs  mod.rs  number.rs  option.rs  primitive_list.rs  set.rs  string.rs
rust/fury-core/src/meta/: meta_store.rs  meta_string.rs  mod.rs  string_util.rs  type_meta.rs
rust/fury-core/src/raw/: maybe_trait_object.rs  mod.rs
rust/fury-core/src/resolver/: class_resolver.rs  context.rs  meta_resolver.rs  mod.rs
rust/fury-core/src/resolvers/: context.rs  meta_resolver.rs  mod.rs
rust/fury-core/src/row/: row.rs
rust/fury-core/src/serializer/: any.rs  bool.rs  datetime.rs  list.rs  map.rs  mod.rs  number.rs  option.rs  polymorph.rs  primitive_list.rs  set.rs  string.rs
rust/fury-derive/: Cargo.toml
rust/fury-derive/src/: fury_meta.rs  fury_row.rs  lib.rs  util.rs
rust/fury-derive/src/object/: derive_enum.rs  misc.rs  mod.rs  polymorphic.rs  read.rs  serializer.rs  write.rs
rust/fury/benches/: chinese.utf8.txt  czech.utf8.txt  simd_bench.rs  simd_utf16_to_utf8.rs
rust/fury/src/: buffer.rs  de.rs  deserializer.rs  error.rs  lib.rs  ser.rs  serializer.rs  ty.rs  types.rs  util.rs
rust/fury/src/meta/: decoder.rs  encoder.rs  encoding.rs  error.rs  meta_string.rs  mod.rs  string_util.rs
rust/fury/src/row/: bit_util.rs  mod.rs  reader.rs  row.rs  writer.rs
rust/fury/tests/: de.rs
rust/fury_derive/: Cargo.toml
rust/fury_derive/src/: lib.rs
rust/test_suite/: Cargo.toml
rust/test_suite/tests/: test_complex_struct.rs
rust/tests/: Cargo.toml
rust/tests/tests/: test_complex_struct.rs  test_custom_trait.rs  test_meta.rs  test_meta_string.rs  test_row.rs  test_util.rs  teste_marco.rs
scala/: README.md  build.sbt
src/: README.md
tools/: gen_fury_builder_doc.py
(+2266 files in other folders)
