[workspace]
members = [
    "fury_derive",
    "fury",
    "test_suite"
]
exclude = [
    "fuzz"
]

[workspace.package]
version = "0.0.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/alipay/fury"
edition = "2021"
keywords = ["fury", "data", "serialization"]
categories = ["encoding"]
