[workspace]
members = [
    "fury",
    "fury-derive",
    "tests"
]

exclude = [
    "fuzz"
]

resolver = "2"

[workspace.package]
version = "0.0.1"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/alipay/fury"
edition = "2021"
keywords = ["fury", "data", "serialization"]
categories = ["encoding"]
