[package]
name = "fury-derive"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { default-features = false, version = "1.0.66" }
syn = { default-features = false, version = "2.0.26", features = ["parsing", "proc-macro", "derive", "printing"] }
quote = { default-features = false, version = "1.0.31" }
thiserror = { default-features = false, version = "1.0.43" }
