[package]
name = "fury"
version = "0.0.1-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { default-features = false, version = "1.0.66" }
syn = { default-features = false, version = "2.0.26", features = ["full", "fold"] }
quote = { default-features = false, version = "1.0.31" }
fury_derive = { path="../fury_derive"}
lazy_static = { version = "1.4.0" }
byteorder = { version = "1.4.3" }
chrono = "0.4.26"
thiserror = { default-features = false, version = "1.0.43" }
