[package]
name = "fury_test_suite"
version = "0.0.1-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
fury = { path = "../fury" }
fury_derive = { path = "../fury_derive" }
chrono = "0.4.26"
lazy_static = { version = "1.4.0" }
